--- a/src/training_att_unet3d.ipynb
+++ b/src/training_att_unet3d.ipynb
@@ -30,7 +30,7 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "BATCH_SIZE = 3\n",
+    "BATCH_SIZE = 4\n",
     "EPOCHS = 100\n",
     "DEVICE = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
    ],
@@ -77,7 +77,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "0"
+      "text/plain": "89"
      },
      "execution_count": 6,
      "metadata": {},
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -322,13 +322,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "opt = torch.optim.Adam(model.parameters(), lr=LR)\n",
     "# loss = torch.nn.BCEWithLogitsLoss # cannot be used because there's a lot of imbalance anyway, so it is better to combine it with dice\n",
-    "loss = BCEDiceLoss()\n",
-    "# loss = DiceLoss()"
+    "# loss = BCEDiceLoss()\n",
+    "loss = DiceLoss()"
    ],
    "metadata": {
     "collapsed": false
@@ -336,13 +336,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cuda\n"
+      "cpu\n"
      ]
     }
    ],
@@ -361,8 +361,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "At epoch [1/100]: 100%|██████████| 74/74 [02:35<00:00,  2.10s/it, loss=1.39]\n",
-      "At epoch [2/100]:  55%|█████▌    | 41/74 [01:32<01:12,  2.20s/it, loss=1.35]"
+      "At epoch [1/100]: 100%|██████████| 56/56 [55:04<00:00, 59.01s/it, loss=0.968]\n",
+      "At epoch [2/100]: 100%|██████████| 56/56 [58:57<00:00, 63.16s/it, loss=0.928] \n",
+      "At epoch [3/100]: 100%|██████████| 56/56 [56:11<00:00, 60.20s/it, loss=0.976] \n",
+      "At epoch [4/100]: 100%|██████████| 56/56 [55:18<00:00, 59.25s/it, loss=0.813]\n",
+      "At epoch [5/100]: 100%|██████████| 56/56 [54:09<00:00, 58.02s/it, loss=0.876]\n",
+      "At epoch [6/100]: 100%|██████████| 56/56 [56:57<00:00, 61.03s/it, loss=0.918] \n",
+      "At epoch [7/100]: 100%|██████████| 56/56 [55:16<00:00, 59.22s/it, loss=0.909]\n",
+      "At epoch [8/100]:  14%|█▍        | 8/56 [08:10<49:04, 61.34s/it, loss=0.854]"
      ]
     }
    ],
@@ -370,10 +376,7 @@
     "train(model, epochs=EPOCHS, training_loader=train_dl, loss_fn=loss, device=DEVICE, optimizer=opt)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
@@ -382,19 +385,18 @@
    "outputs": [],
    "source": [
     "check_accuracy(val_dl, model, DEVICE)\n",
+    "# B3\n",
     "# 100 DICE Results: Results: 115510440/116391936 with accuracy 99.3187 Dice score: 0.7661410570144653\n",
-    "# 100 BCE-DICE Results: 115626234/116391936 with accuracy 99.3421 Dice score: 0.7765376567840576"
+    "# 100 BCE-DICE Results: 115626234/116391936 with accuracy 99.3066 Dice score: 0.7499451041221619\n",
+    "# B4 100 DICE Results: Results: 115510440/116391936 with accuracy A Dice score: D"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
@@ -406,7 +408,7 @@
    ],
    "source": [
     "# saving sample\n",
-    "save(model,\"weights/attention/att3d_100e_adam_b4_bce-dice\")\n",
+    "save(model,\"weights/attention/att3d_100e_adam_b4_bce-dice+10\")\n",
     "print(\"saved the model...\")"
    ],
    "metadata": {
@@ -415,27 +417,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "At epoch [1/50]: 100%|██████████| 56/56 [01:36<00:00,  1.73s/it, loss=0.201] \n",
-      "At epoch [2/50]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.118]\n",
-      "At epoch [3/50]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.171] \n",
-      "At epoch [4/50]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.188]\n",
-      "At epoch [5/50]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.135]\n",
-      "At epoch [6/50]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.0845]\n",
-      "At epoch [7/50]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.27]  \n",
-      "At epoch [8/50]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.218] \n",
-      "At epoch [9/50]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.225] \n",
-      "At epoch [10/50]:  12%|█▎        | 7/56 [00:14<01:28,  1.81s/it, loss=0.128]"
+      "At epoch [1/10]:  76%|███████▌  | 56/74 [01:52<00:36,  2.01s/it, loss=0.0821]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[17], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mtrain\u001B[49m\u001B[43m(\u001B[49m\u001B[43mmodel\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mepochs\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m10\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtraining_loader\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mtrain_dl\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mloss_fn\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mloss\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdevice\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mDEVICE\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43moptimizer\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mopt\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32mE:\\Research\\course research projects\\deep_learning\\braTS-2020\\src\\util\\training_utils.py:24\u001B[0m, in \u001B[0;36mtrain\u001B[1;34m(model, epochs, training_loader, loss_fn, device, optimizer)\u001B[0m\n\u001B[0;32m     21\u001B[0m optimizer\u001B[38;5;241m.\u001B[39mstep()\n\u001B[0;32m     23\u001B[0m tq_dl\u001B[38;5;241m.\u001B[39mset_description(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mAt epoch [\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mepoch\u001B[38;5;250m \u001B[39m\u001B[38;5;241m+\u001B[39m\u001B[38;5;250m \u001B[39m\u001B[38;5;241m1\u001B[39m\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m/\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mepochs\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m]\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m---> 24\u001B[0m tq_dl\u001B[38;5;241m.\u001B[39mset_postfix(loss\u001B[38;5;241m=\u001B[39m\u001B[43mloss\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mitem\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m)\n",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
    ],
    "source": [
-    "train(model, epochs=EPOCHS, training_loader=train_dl, loss_fn=loss, device=DEVICE, optimizer=opt)"
+    "train(model, epochs=10, training_loader=train_dl, loss_fn=loss, device=DEVICE, optimizer=opt)"
    ],
    "metadata": {
     "collapsed": false
