add all todo txt files for logs

--- a/src/training_unet3d.ipynb
+++ b/src/training_unet3d.ipynb
@@ -300,7 +300,9 @@
      "output_type": "stream",
      "text": [
       "At epoch [1/100]: 100%|██████████| 56/56 [01:40<00:00,  1.80s/it, loss=0.909]\n",
-      "At epoch [2/100]:  38%|███▊      | 21/56 [00:38<01:00,  1.72s/it, loss=0.944]"
+      "At epoch [2/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.952]\n",
+      "At epoch [3/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.878]\n",
+      "At epoch [4/100]:  86%|████████▌ | 48/56 [01:24<00:13,  1.72s/it, loss=0.894]"
      ]
     }
    ],
