reformat logs folder

--- a/src/training_unet3d.ipynb
+++ b/src/training_unet3d.ipynb
@@ -302,7 +302,9 @@
       "At epoch [1/100]: 100%|██████████| 56/56 [01:40<00:00,  1.80s/it, loss=0.909]\n",
       "At epoch [2/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.952]\n",
       "At epoch [3/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.878]\n",
-      "At epoch [4/100]:  86%|████████▌ | 48/56 [01:24<00:13,  1.72s/it, loss=0.894]"
+      "At epoch [4/100]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.855]\n",
+      "At epoch [5/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.898]\n",
+      "At epoch [6/100]:   4%|▎         | 2/56 [00:05<02:27,  2.73s/it, loss=0.941]"
      ]
     }
    ],
