add att-dice logs

--- a/src/training_unet3d.ipynb
+++ b/src/training_unet3d.ipynb
@@ -304,7 +304,71 @@
       "At epoch [3/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.878]\n",
       "At epoch [4/100]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.855]\n",
       "At epoch [5/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.898]\n",
-      "At epoch [6/100]:   4%|▎         | 2/56 [00:05<02:27,  2.73s/it, loss=0.941]"
+      "At epoch [6/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.982]\n",
+      "At epoch [7/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.849]\n",
+      "At epoch [8/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.853]\n",
+      "At epoch [9/100]: 100%|██████████| 56/56 [01:38<00:00,  1.76s/it, loss=0.809]\n",
+      "At epoch [10/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.846]\n",
+      "At epoch [11/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.838]\n",
+      "At epoch [12/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.655]\n",
+      "At epoch [13/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.759]\n",
+      "At epoch [14/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.908]\n",
+      "At epoch [15/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.863]\n",
+      "At epoch [16/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.635]\n",
+      "At epoch [17/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.589]\n",
+      "At epoch [18/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.812]\n",
+      "At epoch [19/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.373]\n",
+      "At epoch [20/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.553]\n",
+      "At epoch [21/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.342]\n",
+      "At epoch [22/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.541]\n",
+      "At epoch [23/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.326]\n",
+      "At epoch [24/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.249]\n",
+      "At epoch [25/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.456]\n",
+      "At epoch [26/100]: 100%|██████████| 56/56 [01:42<00:00,  1.83s/it, loss=0.354]\n",
+      "At epoch [27/100]: 100%|██████████| 56/56 [01:38<00:00,  1.76s/it, loss=0.614]\n",
+      "At epoch [28/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.313]\n",
+      "At epoch [29/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.266]\n",
+      "At epoch [30/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.436]\n",
+      "At epoch [31/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.193]\n",
+      "At epoch [32/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.665]\n",
+      "At epoch [33/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.165]\n",
+      "At epoch [34/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.203]\n",
+      "At epoch [35/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.272]\n",
+      "At epoch [36/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.141]\n",
+      "At epoch [37/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.328]\n",
+      "At epoch [38/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.115]\n",
+      "At epoch [39/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.28] \n",
+      "At epoch [40/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.194]\n",
+      "At epoch [41/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.214]\n",
+      "At epoch [42/100]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.248]\n",
+      "At epoch [43/100]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.217]\n",
+      "At epoch [44/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.17] \n",
+      "At epoch [45/100]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.167]\n",
+      "At epoch [46/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.202]\n",
+      "At epoch [47/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.277]\n",
+      "At epoch [48/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.233]\n",
+      "At epoch [49/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.403]\n",
+      "At epoch [50/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.265]\n",
+      "At epoch [51/100]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.15] \n",
+      "At epoch [52/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.17]  \n",
+      "At epoch [53/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.253]\n",
+      "At epoch [54/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.181]\n",
+      "At epoch [55/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.125]\n",
+      "At epoch [56/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.0956]\n",
+      "At epoch [57/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.14] \n",
+      "At epoch [58/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.17] \n",
+      "At epoch [59/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.0629]\n",
+      "At epoch [60/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.419] \n",
+      "At epoch [61/100]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.197]\n",
+      "At epoch [62/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.164]\n",
+      "At epoch [63/100]: 100%|██████████| 56/56 [01:38<00:00,  1.76s/it, loss=0.156] \n",
+      "At epoch [64/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.254] \n",
+      "At epoch [65/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.0596]\n",
+      "At epoch [66/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.29]  \n",
+      "At epoch [67/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.254] \n",
+      "At epoch [68/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.0981]\n",
+      "At epoch [69/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.07]  \n",
+      "At epoch [70/100]:  39%|███▉      | 22/56 [00:40<00:58,  1.72s/it, loss=0.114] "
      ]
     }
    ],
