fix 3dUnet when convT is used

--- a/src/training_unet3d.ipynb
+++ b/src/training_unet3d.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "from util.data import get_dl, get_train_ds, get_val_ds\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "BATCH_SIZE = 4\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "LR = 0.0001\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -73,13 +73,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
-      "text/plain": "75"
+      "text/plain": "6"
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -146,10 +146,10 @@
       "    )\n",
       "  )\n",
       "  (ups): ModuleList(\n",
-      "    (0): ConvTranspose3d(1024, 512, kernel_size=(2, 2, 2), stride=(2, 2, 2))\n",
+      "    (0): Upsample(scale_factor=2.0, mode=trilinear)\n",
       "    (1): DoubleConv3D(\n",
       "      (conv): Sequential(\n",
-      "        (0): Conv3d(1024, 512, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "        (0): Conv3d(1536, 512, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
       "        (1): BatchNorm3d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "        (2): ReLU(inplace=True)\n",
       "        (3): Conv3d(512, 512, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
@@ -157,10 +157,10 @@
       "        (5): ReLU(inplace=True)\n",
       "      )\n",
       "    )\n",
-      "    (2): ConvTranspose3d(512, 256, kernel_size=(2, 2, 2), stride=(2, 2, 2))\n",
+      "    (2): Upsample(scale_factor=2.0, mode=trilinear)\n",
       "    (3): DoubleConv3D(\n",
       "      (conv): Sequential(\n",
-      "        (0): Conv3d(512, 256, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "        (0): Conv3d(768, 256, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
       "        (1): BatchNorm3d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "        (2): ReLU(inplace=True)\n",
       "        (3): Conv3d(256, 256, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
@@ -168,10 +168,10 @@
       "        (5): ReLU(inplace=True)\n",
       "      )\n",
       "    )\n",
-      "    (4): ConvTranspose3d(256, 128, kernel_size=(2, 2, 2), stride=(2, 2, 2))\n",
+      "    (4): Upsample(scale_factor=2.0, mode=trilinear)\n",
       "    (5): DoubleConv3D(\n",
       "      (conv): Sequential(\n",
-      "        (0): Conv3d(256, 128, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "        (0): Conv3d(384, 128, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
       "        (1): BatchNorm3d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "        (2): ReLU(inplace=True)\n",
       "        (3): Conv3d(128, 128, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
@@ -179,10 +179,10 @@
       "        (5): ReLU(inplace=True)\n",
       "      )\n",
       "    )\n",
-      "    (6): ConvTranspose3d(128, 64, kernel_size=(2, 2, 2), stride=(2, 2, 2))\n",
+      "    (6): Upsample(scale_factor=2.0, mode=trilinear)\n",
       "    (7): DoubleConv3D(\n",
       "      (conv): Sequential(\n",
-      "        (0): Conv3d(128, 64, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
+      "        (0): Conv3d(192, 64, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
       "        (1): BatchNorm3d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "        (2): ReLU(inplace=True)\n",
       "        (3): Conv3d(64, 64, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(1, 1, 1), bias=False)\n",
@@ -207,19 +207,8 @@
     }
    ],
    "source": [
-    "model = Base3DUNet(3, 3, features=[64, 128, 256, 512]).to(DEVICE)\n",
+    "model = Base3DUNet(3, 3, features=[64, 128, 256, 512], up_sample=True).to(DEVICE)\n",
     "print(model)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [],
-   "source": [
-    "# load(model, \"weights/3D/3d_50e_adam_b4_dice\")"
    ],
    "metadata": {
     "collapsed": false
@@ -230,6 +219,17 @@
    "execution_count": 11,
    "outputs": [],
    "source": [
+    "# load(model, \"weights/3D/3d_50e_adam_b4_dice\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
     "# model.train()"
    ],
    "metadata": {
@@ -238,14 +238,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total parameters = 90302147\n",
-      "total learnable parameters = 90302147\n"
+      "total parameters = 94130947\n",
+      "total learnable parameters = 94130947\n"
      ]
     }
    ],
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "opt = torch.optim.Adam(model.parameters(), lr=LR)\n",
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
@@ -299,76 +299,64 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "At epoch [1/100]: 100%|██████████| 56/56 [01:40<00:00,  1.80s/it, loss=0.909]\n",
-      "At epoch [2/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.952]\n",
-      "At epoch [3/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.878]\n",
-      "At epoch [4/100]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.855]\n",
-      "At epoch [5/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.898]\n",
-      "At epoch [6/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.982]\n",
-      "At epoch [7/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.849]\n",
-      "At epoch [8/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.853]\n",
-      "At epoch [9/100]: 100%|██████████| 56/56 [01:38<00:00,  1.76s/it, loss=0.809]\n",
-      "At epoch [10/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.846]\n",
-      "At epoch [11/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.838]\n",
-      "At epoch [12/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.655]\n",
-      "At epoch [13/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.759]\n",
-      "At epoch [14/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.908]\n",
-      "At epoch [15/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.863]\n",
-      "At epoch [16/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.635]\n",
-      "At epoch [17/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.589]\n",
-      "At epoch [18/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.812]\n",
-      "At epoch [19/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.373]\n",
-      "At epoch [20/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.553]\n",
-      "At epoch [21/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.342]\n",
-      "At epoch [22/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.541]\n",
-      "At epoch [23/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.326]\n",
-      "At epoch [24/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.249]\n",
-      "At epoch [25/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.456]\n",
-      "At epoch [26/100]: 100%|██████████| 56/56 [01:42<00:00,  1.83s/it, loss=0.354]\n",
-      "At epoch [27/100]: 100%|██████████| 56/56 [01:38<00:00,  1.76s/it, loss=0.614]\n",
-      "At epoch [28/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.313]\n",
-      "At epoch [29/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.266]\n",
-      "At epoch [30/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.436]\n",
-      "At epoch [31/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.193]\n",
-      "At epoch [32/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.665]\n",
-      "At epoch [33/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.165]\n",
-      "At epoch [34/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.203]\n",
-      "At epoch [35/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.272]\n",
-      "At epoch [36/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.141]\n",
-      "At epoch [37/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.328]\n",
-      "At epoch [38/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.115]\n",
-      "At epoch [39/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.28] \n",
-      "At epoch [40/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.194]\n",
-      "At epoch [41/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.214]\n",
-      "At epoch [42/100]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.248]\n",
-      "At epoch [43/100]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.217]\n",
-      "At epoch [44/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.17] \n",
-      "At epoch [45/100]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.167]\n",
-      "At epoch [46/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.202]\n",
-      "At epoch [47/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.277]\n",
-      "At epoch [48/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.233]\n",
-      "At epoch [49/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.403]\n",
-      "At epoch [50/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.265]\n",
-      "At epoch [51/100]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.15] \n",
-      "At epoch [52/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.17]  \n",
-      "At epoch [53/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.253]\n",
-      "At epoch [54/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.181]\n",
-      "At epoch [55/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.125]\n",
-      "At epoch [56/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.0956]\n",
-      "At epoch [57/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.14] \n",
-      "At epoch [58/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.17] \n",
-      "At epoch [59/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.0629]\n",
-      "At epoch [60/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.419] \n",
-      "At epoch [61/100]: 100%|██████████| 56/56 [01:37<00:00,  1.74s/it, loss=0.197]\n",
-      "At epoch [62/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.164]\n",
-      "At epoch [63/100]: 100%|██████████| 56/56 [01:38<00:00,  1.76s/it, loss=0.156] \n",
-      "At epoch [64/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.254] \n",
-      "At epoch [65/100]: 100%|██████████| 56/56 [01:37<00:00,  1.75s/it, loss=0.0596]\n",
-      "At epoch [66/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.29]  \n",
-      "At epoch [67/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.254] \n",
-      "At epoch [68/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.0981]\n",
-      "At epoch [69/100]: 100%|██████████| 56/56 [01:38<00:00,  1.75s/it, loss=0.07]  \n",
-      "At epoch [70/100]:  39%|███▉      | 22/56 [00:40<00:58,  1.72s/it, loss=0.114] "
+      "At epoch [1/100]: 100%|██████████| 56/56 [02:30<00:00,  2.69s/it, loss=0.89] \n",
+      "At epoch [2/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.894]\n",
+      "At epoch [3/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.933]\n",
+      "At epoch [4/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.827]\n",
+      "At epoch [5/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.914]\n",
+      "At epoch [6/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.885]\n",
+      "At epoch [7/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.838]\n",
+      "At epoch [8/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.807]\n",
+      "At epoch [9/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.695]\n",
+      "At epoch [10/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.901]\n",
+      "At epoch [11/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.866]\n",
+      "At epoch [12/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.77] \n",
+      "At epoch [13/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.711]\n",
+      "At epoch [14/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.654]\n",
+      "At epoch [15/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.636]\n",
+      "At epoch [16/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.845]\n",
+      "At epoch [17/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.536]\n",
+      "At epoch [18/100]: 100%|██████████| 56/56 [02:23<00:00,  2.55s/it, loss=0.375]\n",
+      "At epoch [19/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.467]\n",
+      "At epoch [20/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.517]\n",
+      "At epoch [21/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.365]\n",
+      "At epoch [22/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.382]\n",
+      "At epoch [23/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.632]\n",
+      "At epoch [24/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.42] \n",
+      "At epoch [25/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.315]\n",
+      "At epoch [26/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.71] \n",
+      "At epoch [27/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.369]\n",
+      "At epoch [28/100]: 100%|██████████| 56/56 [02:23<00:00,  2.55s/it, loss=0.739]\n",
+      "At epoch [29/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.277]\n",
+      "At epoch [30/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.257]\n",
+      "At epoch [31/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.223]\n",
+      "At epoch [32/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.171]\n",
+      "At epoch [33/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.124]\n",
+      "At epoch [34/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.284]\n",
+      "At epoch [35/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.285]\n",
+      "At epoch [36/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.246]\n",
+      "At epoch [37/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.148]\n",
+      "At epoch [38/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.196]\n",
+      "At epoch [39/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.19] \n",
+      "At epoch [40/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.15] \n",
+      "At epoch [41/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.231]\n",
+      "At epoch [42/100]: 100%|██████████| 56/56 [02:23<00:00,  2.55s/it, loss=0.383]\n",
+      "At epoch [43/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.572] \n",
+      "At epoch [44/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.352]\n",
+      "At epoch [45/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.08] \n",
+      "At epoch [46/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.188] \n",
+      "At epoch [47/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.214]\n",
+      "At epoch [48/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.133]\n",
+      "At epoch [49/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.0826]\n",
+      "At epoch [50/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.0985]\n",
+      "At epoch [51/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.0682]\n",
+      "At epoch [52/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.205] \n",
+      "At epoch [53/100]: 100%|██████████| 56/56 [02:24<00:00,  2.57s/it, loss=0.083] \n",
+      "At epoch [54/100]: 100%|██████████| 56/56 [02:23<00:00,  2.57s/it, loss=0.289] \n",
+      "At epoch [55/100]: 100%|██████████| 56/56 [02:24<00:00,  2.58s/it, loss=0.311] \n",
+      "At epoch [56/100]: 100%|██████████| 56/56 [02:23<00:00,  2.57s/it, loss=0.111] \n",
+      "At epoch [57/100]: 100%|██████████| 56/56 [02:23<00:00,  2.56s/it, loss=0.221]\n",
+      "At epoch [58/100]:  50%|█████     | 28/56 [01:13<01:11,  2.54s/it, loss=0.146]"
      ]
     }
    ],
@@ -389,7 +377,7 @@
    "source": [
     "check_accuracy(val_dl,model,DEVICE)\n",
     "# convT\n",
-    "# 100 DICE Results: Results: 115510440/116391936 with accuracy 99.2427 Dice score: 0.7560997009277344\n",
+    "# 100 DICE Results: Results: 115510440/116391936 with accuracy 99.3155 Dice score: 0.7647337317466736\n",
     "# 100 BCE-DICE Results: 115626234/116391936 with accuracy 99.3421 Dice score: 0.7765376567840576\n",
     "# upsample\n",
     "# 100 DICE Results: Results: 115510440/116391936 with accuracy A Dice score: D\n",
@@ -404,30 +392,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "saved the model...\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# saving sample\n",
-    "save(model,\"weights/3D/3d_100e_adam_b4_bce-dice\")\n",
+    "save(model,\"weights/3D/3d_100e_adam_b4_dice_upsampler\")\n",
     "print(\"saved the model...\")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "save(model,\"weights/3D/3d_100e_adam_b4_dice_upsampler\")"
+   ],
    "metadata": {
     "collapsed": false
    }
